<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">shakeit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="want_random">Shake me to get a suggestion!</string>
    <string name="want_random_CT">Shake me to get a suggestion of an excellent cocktail!</string>
    <string name="want_random_JK">Shake me to get a suggestion of an excellent joke!</string>
    <string name="want_random_restau">Shake me to get a suggestion of a restaurant!</string>
    <string name="get_random">Give me a suggestion</string>
    <string name="get_random_again">Give me another suggestion</string>
    <string name="tilbaka">Go back</string>
    <string name="movies">Movies</string>
    <string name="cocktails">Cocktails</string>
    <string name="restaurants">Restaurants</string>
    <string name="jokes">Jokes</string>
    <string name="moneyMark">Max price</string>
    <string name="postcode">Postcode</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="title_activity_cocktail">CocktailActivity</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="cocktail_h1">Cocktail name:</string>
    <string name="cocktail_h2">Type: </string>
    <string name="cocktail_h3">Ingredients: </string>
    <string name="tvPressButton">Or press this button:</string>


>>>>>>> b2f866944fab38d04a4cf6a39d4642f6f252ed2f

</resources>
