<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/want_random_CT"
        android:id="@+id/tvViltuRandomCT"
        android:layout_gravity="center_horizontal"
        />


    <CheckBox android:id="@+id/checkbox_price1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Less than 1300 kr."
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_price2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1300 kr. - 2500 kr."
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_price3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2500 kr. - 4000 kr."
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_price4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="More than 4000 kr."
        android:onClick="onCheckboxClicked"/>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvPressButton"
        android:id="@+id/tvPressButtonCT"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_random"
        android:id="@+id/bVilRandom"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilbaka"
        android:id="@+id/bTilBaka"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>