<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:text="@string/want_random_CT"
        android:id="@+id/tvViltuRandomCT"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/vodka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vodka"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rum"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/whiskey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wiskey"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/noFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No filter"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvPressButton"
        android:id="@+id/tvPressButtonCT"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_random"
        android:id="@+id/bVilRandom"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilbaka"
        android:id="@+id/bTilBaka"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

</LinearLayout>